# serial-port

./: Cargo.toml  README.md
bindings/: Cargo.toml  build.rs
bindings/src/: lib.rs
src/: lib.rs  serial_linux.rs  serial_windows.rs
