[package]
name = "serial-port"
version = "0.1.36"
authors = ["YdrMaster <ydrml@hotmail.com>"]
edition = "2021"
readme = "README.md"

[target.'cfg(windows)'.dependencies]
windows = { version = "~0.36", features = [
    "Win32_Devices_Communication",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
] }
encoding = "*"

[target.'cfg(unix)'.dependencies]
nix = "*"
